Add the regestration form with form validation

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 .form-control-plaintext {
   padding: 0px !important;
 }
+
+.invalid {
+  border: 1px solid red;
+}
+.valid-class {
+  border: 1px solid green;
+}
